# sepang

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_GUIDE.md  GITHUB_SECRETS.md  Makefile  README.md  세팡_클라이언트_설정_가이드.html
.claude/: settings.local.json
.github/workflows/: 01_ci.yml  02_cd_staging.yml  02_cd_vercel.yml  03_cd_production.yml  04_monitoring.yml  05_dependency_update.yml  05_scheduled_jobs.yml  06_pr_checks.yml  99_check_accounts.yml  99_check_admin.yml  99_fix_admin.yml  99_fix_otp.yml  99_get_totp.yml  99_reset_partner_pw.yml  (+1 more)
backend/: .env.example  alembic.ini  database_schema.sql  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  tasks.py  vercel.json
backend/.vercel/: project.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_data.py  0003_push_subscriptions.py  0004_get_nearby_orders.py  0005_payment.py  0006_wash_items.py  0007_p1_cancel_availability.py  0008_pricing_hours_penalty.py  0009_shop_price_adjustment.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  geocoding.py  orders.py  payments.py  pricing.py  reviews.py  settlements.py  shop_hours.py  users.py  wash_items.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: base.py  order.py  shop.py
backend/app/services/: geo.py  geocoding.py  notification.py  weather.py
backend/app/ws/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: test_celery_tasks.py  test_order_api.py
backend/tests/unit/: test_order_logic.py
pic/: export_icon.html
scripts/: db_maintenance.sh  pre-push-check.sh  rollback.sh
supabase/: config.toml
(+73 files in other folders)
