[project]
name = "sepang-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "geoalchemy2==0.17.0",
    "pyjwt==2.12.0",
    "bcrypt==4.2.1",
    "pyotp==2.9.0",
    "supabase==2.10.0",
    "httpx==0.27.2",
    "firebase-admin==6.6.0",
    "pywebpush==2.0.0",
    "python-multipart==0.0.22",
    "Pillow==11.1.0",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.1.0",
    "ruff",
    "mypy",
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
disable_error_codes = ["union-attr", "operator", "arg-type", "type-var", "call-overload"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Keep critical rules: syntax errors, undefined names, redefinitions
select = ["E9", "F63", "F7", "F8", "W605", "E711", "E712"]
# Ignore common style choices in this codebase
ignore = [
    "F401",  # unused import — many imports are used conditionally or in type hints
    "F841",  # local variable assigned but never used
    "E401",  # multiple imports on one line
    "E701",  # multiple statements on colon
    "E402",  # module import not at top of file
]
# Don't auto-fix in CI
[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["F401", "E401", "E402"]
"tasks.py"  = ["F401", "E401"]
"tests/*"   = ["F401", "E701"]
